--- a/unit1kotlinbasic/app/src/main/AndroidManifest.xml
+++ b/unit1kotlinbasic/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Unit1kotlinbasic"
         tools:targetApi="31">
         <activity
+            android:name=".DiceRollerActivity"
+            android:exported="false" />
+        <activity
             android:name=".pathway_2.BirthdayCardActivity"
             android:exported="false" />
         <activity
