--- a/unit2layouts/app/src/main/AndroidManifest.xml
+++ b/unit2layouts/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Unit2layouts"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".pathway_1.layout.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
